--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ section {
     height: 15%;
     width: 235px;
     background-color: transparent;
-    bottom: 15%;
+    bottom: 50px;
 }
 
 .down i {
